# pihole-api

./: README.md  pyproject.toml  setup.py  upload.sh
.github/workflows/: build.yml  pydoctor.yml  pytest.yml
pihole/: auth.py  main.py
pihole-api/: main.py
