[tool.poetry]
name = "pihole"
version = "3.0.0"
description = "A python3 wrapper for the pihole api that aims to eventually be a full replacement for the AdminLTE web panel"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
